--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,4 +33,4 @@ label, input[type=text], input[type=email], button[type=submit], td, button[data
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-}
+}x
